# embed-creator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: commands.rs  embed_command.rs  main.rs
src/commands/: embed.rs  embed_wizard.rs
