[package]
name = "embed-creator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.83"
axum = "0.7.4"
serenity = { git = "https://github.com/GnomedDev/serenity.git", branch = "user-apps", version = "0.12.1", features = [
    "unstable_discord_api",
    "interactions_endpoint",
] }
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = "1.28.2"
tracing = "0.1.40"
