[package]
name = "embed-creator"
version = "0.2.0"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
repository = "https://github.com/valentinegb/embed-creator"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.44.0"
# Since poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
shuttle-serenity = "0.44.0"
tracing = "0.1.37"
tokio = "1.26.0"
