[package]
name = "embed-creator"
version = "0.2.0"
authors = ["Valentine Briese <valentinegb@icloud.com>"]
edition = "2021"
repository = "https://github.com/valentinegb/embed-creator"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = { git = "https://github.com/valentinegb/poise.git", branch = "user-apps", version = "0.6.1" }
shuttle-runtime = { git = "https://github.com/valentinegb/shuttle.git", branch = "serenity-user-apps", version = "0.45.0" }
shuttle-serenity = { git = "https://github.com/valentinegb/shuttle.git", branch = "serenity-user-apps", version = "0.45.0" }
tracing = "0.1.37"
tokio = "1.26.0"
